tests/NormalTests/paczka1/small_fuzzy/72099172.err
Error in line 2: A501 S283 54,9
Error in line 5: hBnJHsxg5JS A501 88,5
Error in line 12: EOtl9B A501 11,6
Error in line 13: EOtl9B S496 22,1
Error in line 16: RQV67NjIv S516 29,22
